# GitNexus

./: .gitignore  build-and-run.ps1  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
.uploads/: fa2b691c-1945-4a2e-928f-48409cb43dc9_6a38eb9157ef0f229db8e673_2026-06-22-gitui-design.md
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  avatar.rs  gitee.rs  lib.rs  mirror.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/git/: archive.rs  bisect.rs  blame.rs  branch.rs  cherry_pick.rs  command.rs  command_log.rs  commit.rs  conflict.rs  custom_action.rs  diff.rs  discard.rs  fetch.rs  file_ops.rs  gc.rs  gitflow.rs  in_progress.rs  lfs.rs  log.rs  merge.rs  mod.rs  patch.rs  platform.rs  pull.rs  push.rs  rebase.rs  remote.rs  repository.rs  reset.rs  revert.rs  search.rs  stash.rs  statistics.rs  status.rs  submodule.rs  tag.rs  watcher.rs  worktree.rs
src-tauri/src/models/: mod.rs
src-tauri/tests/: git_operations.rs  new_features.rs  perf.rs
src/components/BranchTree/: index.tsx
src/components/CommandPalette/: index.tsx
src/components/CommitGraph/: index.tsx
src/components/ContextMenu/: index.tsx
src/hooks/: useContextMenu.ts  useGitWatcher.ts
src/i18n/: index.tsx  useTranslation.ts
src/i18n/locales/: en.ts  (+1 more)
src/stores/: git-store.ts  preferences-store.ts  repository-store.ts  ui-store.ts
src/types/: index.ts
src/utils/: diff-parser.ts  format.ts  git.ts
(+24 files in other folders)
